re PR c++/27572 (ICE on typedef in parameter declaration)

PR c++/27572
	* decl.c (grokdeclarator): Return error_mark_node after invalid
	typedef.

	* g++.dg/other/typedef1.C: New test.
	* g++.dg/template/typedef4.C: New test.
	* g++.dg/template/typedef5.C: New test.

From-SVN: r115729